<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('settings', function (Blueprint $table) {
            $table->id();
            $table->string('key')->unique();
            $table->string('category')->nullable();
            $table->integer('value_integer')->nullable();
            $table->date('value_date')->nullable();
            $table->date('value_start_date')->nullable();
            $table->date('value_end_date')->nullable();
            $table->enum('value_type', ['integer', 'date', 'date_range']);
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('settings');
    }
};
