Project InventoryManagementSystem {
    database_type: 'MySQL'
    note: 'Inventory Management System Database'
}

enum SettingType {
  integer
  date
  date_range
}

Table Users {
  id bigint [pk]
  username string [not null,unique]
  email string [null,unique]
  password string [not null]
  remember_token string
  created_at timestamp
  updated_at timestamp
}
//Roles can be Customer, Admin, Super Admin and Warehouse Worker
Table Roles{
  id bigint [pk]
  name string [not null]
  description text
}

Table user_role_pivot{
  user_id bigint [pk, ref: > Users.id]
  role_id bigint [pk, ref: > Roles.id]
}

Table Categories {
  id bigint [pk, not null, increment]
  parent_id bigint [ref: < Categories.id]
  name string [not null]
  slug string [not null]
  description text
  created_at timestamp
  updated_at timestamp
}


Table Products{
  id bigint [pk]
  code string [unique, not null]
  name string [not null]
  slug string [not null]
  description text
  //price field is the current price
  //So when the price is updated, a price history entry will be added in PriceHistory Table
  price double [default: 0.0]
  category_id bigint [ref: > Categories.id]
  stock_offset int [default: 0]
  parts_per_unit int [default: 0]
  created_at timestamp
  updated_at timestamp
}




Table Suppliers{
  id bigint [pk]
  code string [unique]
  name string [not null]
  phone string
}



Table Orders{
  id bigint [pk]
  reference_code string [unique]
  user_id bigint [ref: > Users.id]
  supplier_id bigint [ref: > Suppliers.id]
  date timestamp
  total_amount double
  //This discount is overall order discount and it's separated from discount per item
  discount float [default: 0.0]
  completed bool [default: false]
}

Table OrderItems{
  id bigint [pk]
  order_id bigint [ref: > Orders.id]
  //check if this relation correct
  product_id bigint [ref: - Products.id]
  stock_id bigint [ref: > Stocks.id]
  discount float [default: 0.0]
  discount_limit float [null]
  unit_price double
  quantity int [default: 1]
  parts int  [default: 0]
  expire_date date [null]
  total_amount double
  created_at datetime
  updated_at datetime
}

Table Stocks{
  id bigint [pk]
  code string [unique]
  product_id bigint [ref: > Products.id]
  supplier_id bigint [ref: > Suppliers.id]
  expire_date date [null]
  original_quantity int
  original_parts int
  available_quantity int
  available_parts int
  sold_quantity int
  sold_parts int
  parts_per_unit int
  discount float
  discount_limit float
  price double
}


Table Notes{
  id bigint [pk]
  content text
  created_at timestamp
  updated_at timestamp
}

Table Shifts{
    id bigint [pk]
    start datetime [not null, note: "Default value is the current datetime"]
    end datetime [null, default: null]
    expected_amount double [null]
    real_amount double [null]
    difference double [null]
    user_id bigint [ref: > Users.id]
}


Table Settings {
  id bigint [pk]
  key string [unique]
  category string [null]
  value_integer int [null]
  value_date date [null]
  value_start_date date [null]
  value_end_date date [null]
  value_type SettingType [not null]
}
